seaqt/QtWidgets/gen_qtreeview.h

typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QTreeView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
bool QTreeView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QTreeView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QTreeView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QTreeView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QTreeView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QTreeView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QTreeView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QTreeView_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QTreeView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QTreeView_virtualbase_horizontalOffset(const void* self);
bool QTreeView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QTreeView_virtualbase_verticalOffset(const void* self);
bool QTreeView_override_virtual_setSelection(void* self, intptr_t slot);
void QTreeView_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QTreeView_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QTreeView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QTreeView_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QTreeView_virtualbase_selectedIndexes(const void* self);
bool QTreeView_override_virtual_timerEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTreeView_override_virtual_paintEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QTreeView_override_virtual_drawRow(void* self, intptr_t slot);
void QTreeView_virtualbase_drawRow(const void* self, QPainter* painter, QStyleOptionViewItem* options, QModelIndex* index);
bool QTreeView_override_virtual_drawBranches(void* self, intptr_t slot);
void QTreeView_virtualbase_drawBranches(const void* self, QPainter* painter, QRect* rect, QModelIndex* index);
bool QTreeView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QTreeView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QTreeView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QTreeView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QTreeView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QTreeView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QTreeView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QTreeView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QTreeView_override_virtual_updateGeometries(void* self, intptr_t slot);
void QTreeView_virtualbase_updateGeometries(void* self);
bool QTreeView_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QTreeView_virtualbase_viewportSizeHint(const void* self);
bool QTreeView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QTreeView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QTreeView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QTreeView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QTreeView_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QTreeView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QTreeView_override_virtual_selectionChanged(void* self, intptr_t slot);
void QTreeView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QTreeView_override_virtual_currentChanged(void* self, intptr_t slot);
void QTreeView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QTreeView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QTreeView_virtualbase_sizeHintForRow(const void* self, int row);
bool QTreeView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTreeView_virtualbase_inputMethodQuery(const void* self, int query);
bool QTreeView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QTreeView_virtualbase_updateEditorData(void* self);
bool QTreeView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QTreeView_virtualbase_updateEditorGeometries(void* self);
bool QTreeView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QTreeView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QTreeView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QTreeView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QTreeView_override_virtual_closeEditor(void* self, intptr_t slot);
void QTreeView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QTreeView_override_virtual_commitData(void* self, intptr_t slot);
void QTreeView_virtualbase_commitData(void* self, QWidget* editor);
bool QTreeView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QTreeView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QTreeView_override_virtual_edit2(void* self, intptr_t slot);
bool QTreeView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QTreeView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QTreeView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QTreeView_override_virtual_startDrag(void* self, intptr_t slot);
void QTreeView_virtualbase_startDrag(void* self, int supportedActions);
bool QTreeView_override_virtual_viewOptions(void* self, intptr_t slot);
QStyleOptionViewItem* QTreeView_virtualbase_viewOptions(const void* self);
bool QTreeView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTreeView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTreeView_override_virtual_event(void* self, intptr_t slot);
bool QTreeView_virtualbase_event(void* self, QEvent* event);
bool QTreeView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
void QTreeView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);